--- a/nos-tech/src/css/contact.css
+++ b/nos-tech/src/css/contact.css
@@ -1,12 +1,19 @@
 .Content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   width: 75%;
   margin: 0 auto;
   padding: 25px 10px;
 }
+h1,
+h2 {
+  margin: 10px auto;
+  color: #aaa;
+}
 .left {
   background-color: #d1d1d1;
   padding: 50px;
-
   width: 50%;
   float: left;
   color: red;
@@ -14,26 +21,13 @@
 }
 .right {
   padding: 50px;
-  text-align: center;
   float: right;
   background-color: #f4f3f3;
   width: 50%;
-  color: blue;
   font-size: 12px;
 }
-.custom-field {
-  position: relative;
-  font-size: 14px;
-  padding-top: 20px;
-  margin-bottom: 5px;
-}
 
-.custom-field input {
-  border: none;
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
+input {
   background: white;
   padding: 12px;
   border-radius: 3px;
@@ -41,21 +35,16 @@
   outline: none;
 }
 
-.custom-field .placeholder {
-  position: absolute;
-  left: 12px;
-  top: calc(50% + 10px);
-  transform: translateY(-50%);
+input::placeholder {
   color: #aaa;
-  transition: top 0.3s ease, font-size 0.3s ease, color 0.3s ease;
-  resize: none;
-  border: none;
-  outline: none;
+}
+.form-group {
+  margin: 10px auto;
+  align-items: center;
+  width: 77%;
+  align-content: center;
 }
 
-.custom-field input:valid + .placeholder,
-.custom-field input:focus + .placeholder {
-  top: 10px;
-  font-size: 10px;
-  color: #222;
+.btn {
+  margin-top: 20px;
 }
