--- a/nos-tech/src/components/header/header.css
+++ b/nos-tech/src/components/header/header.css
@@ -29,6 +29,7 @@ li {
       position: relative;
       display: block;
       text-decoration: none;
+      margin: 2px 5px;
       padding: 5px;
       transition: 0.5s; }
 
