modify 'searchinfo' component styling

--- a/nos-tech/src/components/search-info/searchinfo.css
+++ b/nos-tech/src/components/search-info/searchinfo.css
@@ -1,16 +1,15 @@
-.search-info {
-    margin-top: 75px;
+.wrap {
+    margin: 100px 0;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 150px;
 }
 
-.search-information {
-  max-width: 450px;
+.search-info {
+ width: 850px;
+ padding: 15px;
 }
-
 
 .availableCourses {
     background-color: white;
@@ -24,13 +23,32 @@
     box-shadow: 3px 5px 14px #bebcbc; 
     }
 
+.link {
+    background-color: transparent;
+    max-width: 10px;
+}
+
+.availableCourses {
+    background-color: #5C66A9;
+    color: white;
+    outline-color: #5C66A9;
+    border-color: #5C66A9;
+    box-shadow: 3px 5px 14px #bebcbc;
+}
+
 .availableCourses:hover,
 .availableCourses:focus,
 .availableCourses:active,
 .availableCourses:visited,
 .availableCourses:active:hover{
-    background-color: #F7A366 !important;
-    outline-color: #F7A366 !important;
-    border-color:#F7A366 !important;
-
+    background-color: #464F86 !important;
+    box-shadow: 3px 5px 14px #bebcbc; 
 }
+
+
+@media only screen and (max-width: 800px) {
+    .search-info {
+        max-width: 500px;
+        padding: 15px;
+       }
+} 
