--- a/nos-tech/src/components/header/header.css
+++ b/nos-tech/src/components/header/header.css
@@ -54,7 +54,7 @@ li:hover::after {
     
 
 .navigation{
-    color: black !important;
+    color:black;
     text-decoration: none !important;
 }
 .navbar-dark .navbar-toggler-icon{
