--- a/nos-tech/src/screens/course/course.css
+++ b/nos-tech/src/screens/course/course.css
@@ -14,11 +14,15 @@ html {
 }
 
 .videoDiv {
-  width: 90%;
+  width: 100%;
   display: flex;
 }
 
 .video {
+  width: 80%;
+}
+
+.left-main {
   width: 80%;
 }
 
@@ -39,13 +43,39 @@ html {
   align-items: center;
 }
 
-.course-nav {
+.list-group {
+  max-height: 500px;
+  overflow-y: auto;
+  padding-left: 5px;
 }
+
+.course-list li {
+  background-color: #232324;
+  word-wrap: break-word;
+}
+
+.course-list li:hover {
+  cursor: pointer;
+  background-color: #ffbb32;
+}
+
+.course-list li:active {
+  background-color: ;
+}
+
+.course-nav {
+  margin-left: 3%;
+}
+
 .course-nav li {
   font-size: 20px;
   display: inline;
   list-style-type: none;
   margin-right: 20px;
+}
+.course-nav li:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
 .about {
   display: flex;
