--- a/nos-tech/src/components/error/error.css
+++ b/nos-tech/src/components/error/error.css
@@ -1,13 +1,21 @@
 * {
-    font-family: 'Roboto', sans-serif;   
+  font-family: 'Roboto', sans-serif;
 }
 
 .has-error {
-    border: 1px solid red;
+  border: 1px solid red;
+}
+/* css form test */
+.frm-group {
+  width: 45% !important;
 }
 
+.frm-control {
+  width: 85% !important;
+}
+/* css form test END */
 .form-message {
-    font-size: 14px;
-    font-style: italic;
-    color: red;
+  font-size: 14px;
+  font-style: italic;
+  color: red;
 }
