--- a/nos-tech/src/screens/courses/courses.css
+++ b/nos-tech/src/screens/courses/courses.css
@@ -3,10 +3,11 @@
     height: 150px;
 }
 .courses-card{
-    width: 300px;
-    border: none;
-    height: 300px;
+    width: fit-content;
+    border: 1px solid #D0D0D0;
+    height: fit-content;
     margin-bottom: 30px;
+    padding: 1rem;
   
 }
 .courses-title{
@@ -28,8 +29,12 @@
     overflow: hidden;
 }
 .courses-footer{
-    height: 50%;
-    padding-top: 3%;
+    height: fit-content;
+    margin-top: 8px;
+    padding-top: 1%;
+    display: table-cell;
+    display: flex;
+    justify-content: space-between; 
 }
 .courses-headline{
     font-size: 20px;
@@ -40,4 +45,24 @@
     font-size: 20px;
     color: rgb(109, 120, 156);
     margin: 5% 0 2% 3.5%;
+}
+
+
+span.hover{
+    cursor: pointer;
+
+}
+span.hover:hover{
+    color:#ff0047;
+}
+
+.tooltip [class$="inner"] {
+    background-color: #fc4563;
+    /* border: 1px solid background-color; */
+}
+
+.buy{
+    margin-left:'3px'; 
+    margin-bottom: 10px;
+    padding:'12px';
 }
