--- a/nos-tech/src/components/banner/Banner.css
+++ b/nos-tech/src/components/banner/Banner.css
@@ -46,3 +46,39 @@
     background-color: black;
     color: white;
 }
+
+/* //My Course banner  */
+.MyCourseBanner{
+    background-size: cover;
+    /* background-color:#485; */
+    background-color:  #000;
+    padding: 1rem;
+    /* display:flex; 
+    flex-direction:row; */
+    /* //display: flex; */
+    /* color: #283 */
+
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Grenze+Gotisch&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap');
+
+.MyCourseBanner-title{
+    position: relative;
+    color: white;
+    font-weight: 300;
+    cursor: pointer;
+    font-family: 'Roboto', cursive;
+}
+
+.my{
+    transform: rotate( '45deg');
+    font-family: 'Roboto', cursive;
+}
+
+.my-container{
+    display:flex; flex-direction:row;
+    justify-content: center;
+    /* justify-content: space-between; */
+}
