--- a/nos-tech/src/screens/courses/courses.css
+++ b/nos-tech/src/screens/courses/courses.css
@@ -5,12 +5,16 @@
 .courses-card{
     width: fit-content;
     border: 1px solid #D0D0D0;
-    height: fit-content;
+    /* height: 350px; */
     margin-bottom: 30px;
-    padding: 1rem;
+    /* //padding: 1rem; */
   
 }
 .courses-title{
+    margin-top: 1rem;
+    padding-right: .5rem;
+    padding-left: 1rem;
+    padding-bottom: .4rem;
     font-size: 18px;
     height: 40%;
     width: 100%;
@@ -20,6 +24,9 @@
     overflow: hidden; 
 }
 .courses-desc{
+    padding-right: .5rem;
+    padding-left: 1rem;
+    padding-bottom: .5rem;
     font-size: 15px;
     color:rgb(105, 105, 105);
     height: 40%;
@@ -29,17 +36,23 @@
     overflow: hidden;
 }
 .courses-footer{
-    height: fit-content;
     margin-top: 8px;
-    padding-top: 1%;
-    display: table-cell;
-    display: flex;
-    justify-content: space-between; 
+    padding-top: .8rem;
+    padding-bottom: 1rem;
+    /* //padding: 1rem; */
+    /* //display: table-cell; */
+    /* display: flex;
+    flex-wrap: nowrap;
+    flex-flow: row; */
 }
 .courses-headline{
-    font-size: 20px;
+    font-size: 23px;
     color: rgb(109, 120, 156);
-    margin: 5% 0 2% 3.5%;
+     margin: 3.5% 2% 0 3%; 
+}
+.courses-headline :hover{
+    text-decoration: underline;
+
 }
 .courses-headline-recently{
     font-size: 20px;
@@ -61,8 +74,39 @@ span.hover:hover{
     /* border: 1px solid background-color; */
 }
 
+.tool{
+    margin-right: 8px;
+}
+
 .buy{
-    margin-left:'3px'; 
-    margin-bottom: 10px;
-    padding:'12px';
+    /* //margin-bottom: 10px; */
+    /* padding:.55rem; */
+     border-radius: 3%; 
+}
+.effect{
+    margin-left: 2px;
+}
+
+.effect:hover{
+    font-size:1.05rem;
+    transition: 0.35s ease-out;
+}
+
+.price{
+    border:1px solid #d8d8d8;
+    border-radius: 2%;
+    padding:.5rem;
+    color: "#010b13";
+    /* background-color: #d0d0d0; */
+    font-weight: 600;
+}
+
+.price:hover{
+    padding:.65rem;
+    font-size:2.8rem;
+    background-color: #d0d0d0;
+    border-radius: 15%;
+    color:#000;
+    cursor: pointer;
+    transition: 0.4s ease-in-out;
 }
