--- a/nos-tech/src/screens/courses/courses.css
+++ b/nos-tech/src/screens/courses/courses.css
@@ -66,3 +66,9 @@ span.hover:hover{
     margin-bottom: 10px;
     padding:'12px';
 }
+
+.add-course-form{
+    padding: 20px;
+    box-shadow: 10px 20px 30px #f5f5f5;
+    margin-bottom: 50px;
+}
