--- a/nos-tech/src/screens/courses/courses.css
+++ b/nos-tech/src/screens/courses/courses.css
@@ -41,10 +41,10 @@
     padding-bottom: 1rem;
     /* //padding: 1rem; */
     /* //display: table-cell; */
-    /* display: flex;
+    display: flex; 
     flex-wrap: nowrap;
-    flex-flow: row; */
-}
+    flex-flow: row; 
+} 
 .courses-headline{
     font-size: 23px;
     color: rgb(109, 120, 156);
@@ -80,8 +80,8 @@ span.hover:hover{
 
 .buy{
     /* //margin-bottom: 10px; */
-    /* padding:.55rem; */
-     border-radius: 3%; 
+    padding:.6rem;
+    border-radius: 8%; 
 }
 .effect{
     margin-left: 2px;
