--- a/nos-tech/src/screens/courses/courses.css
+++ b/nos-tech/src/screens/courses/courses.css
@@ -5,16 +5,12 @@
 .courses-card{
     width: fit-content;
     border: 1px solid #D0D0D0;
-    /* height: 350px; */
+    height: fit-content;
     margin-bottom: 30px;
-    /* //padding: 1rem; */
+    padding: 1rem;
   
 }
 .courses-title{
-    margin-top: 1rem;
-    padding-right: .5rem;
-    padding-left: 1rem;
-    padding-bottom: .4rem;
     font-size: 18px;
     height: 40%;
     width: 100%;
@@ -24,9 +20,6 @@
     overflow: hidden; 
 }
 .courses-desc{
-    padding-right: .5rem;
-    padding-left: 1rem;
-    padding-bottom: .5rem;
     font-size: 15px;
     color:rgb(105, 105, 105);
     height: 40%;
@@ -36,23 +29,17 @@
     overflow: hidden;
 }
 .courses-footer{
+    height: fit-content;
     margin-top: 8px;
-    padding-top: .8rem;
-    padding-bottom: 1rem;
-    /* //padding: 1rem; */
-    /* //display: table-cell; */
-    display: flex; 
-    flex-wrap: nowrap;
-    flex-flow: row; 
-} 
-.courses-headline{
-    font-size: 23px;
-    color: rgb(109, 120, 156);
-     margin: 3.5% 2% 0 3%; 
+    padding-top: 1%;
+    display: table-cell;
+    display: flex;
+    justify-content: space-between; 
 }
-.courses-headline :hover{
-    text-decoration: underline;
-
+.courses-headline{
+    font-size: 20px;
+    color: rgb(109, 120, 156);
+    margin: 5% 0 2% 3.5%;
 }
 .courses-headline-recently{
     font-size: 20px;
@@ -72,10 +59,6 @@ span.hover:hover{
 .tooltip [class$="inner"] {
     background-color: #fc4563;
     /* border: 1px solid background-color; */
-}
-
-.tool{
-    margin-right: 8px;
 }
 
 .buy{
