Fixed some small issues

--- a/nos-tech/src/components/icons/loader.css
+++ b/nos-tech/src/components/icons/loader.css
@@ -2,7 +2,7 @@
 .sk-cube-grid {
   width: 100px;
   height: 100px;
-  margin: 100px auto;
+  margin: 100px auto 400px;
 }
 
 .sk-cube-grid .sk-cube {
