--- a/nos-tech/src/components/banner/Banner.css
+++ b/nos-tech/src/components/banner/Banner.css
@@ -52,17 +52,19 @@
     background-size: cover;
     /* background-color:#485; */
     background-color:  #000;
-    padding: 1rem;
+    padding: 1rem; 
     /* display:flex; 
     flex-direction:row; */
     /* //display: flex; */
     /* color: #283 */
 
-}
+} 
 
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Grenze+Gotisch&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap');
+
+
 
 .MyCourseBanner-title{
     position: relative;
@@ -78,7 +80,8 @@
 }
 
 .my-container{
-    display:flex; flex-direction:row;
+    display:flex; 
+    flex-direction:row;
     justify-content: center;
     /* justify-content: space-between; */
 }
