Added some styles and better design at my courses

--- a/nos-tech/src/screens/myCourses/myCourses.css
+++ b/nos-tech/src/screens/myCourses/myCourses.css
@@ -62,3 +62,10 @@
 .fav{
     margin-left:8%;
 }
+
+.selected{
+    color: midnightblue;
+    text-decoration: none;
+    text-decoration-color: midnightblue;
+    font-weight: bold;
+}
