--- a/nos-tech/src/components/banner/Banner.css
+++ b/nos-tech/src/components/banner/Banner.css
@@ -49,9 +49,10 @@
 
 /* //My Course banner  */
 .MyCourseBanner{
+    background-image: url('/tec.jpg');
     background-size: cover;
     /* background-color:#485; */
-    background-color:  #000;
+    /* //background-color:  #000; */
     padding: 1rem; 
     /* display:flex; 
     flex-direction:row; */
