--- a/nos-tech/src/screens/course/course.css
+++ b/nos-tech/src/screens/course/course.css
@@ -5,12 +5,16 @@ html {
 .mainContent {
   background-color: #232324;
   color: white !important;
-  padding-left: 5rem;
+  padding-left: 3rem;
 }
 
 .mainContent a {
   color: white;
   /* text-decoration: underline; */
+}
+
+.course-name {
+  margin-left: -2%;
 }
 
 .videoDiv {
@@ -22,7 +26,7 @@ html {
   width: 80%;
 }
 
-.left-main {
+.leftt-main {
   width: 80%;
 }
 
@@ -36,7 +40,7 @@ html {
 }
 
 .right-main {
-  width: 20%;
+  width: 10%;
   margin-left: 4rem;
   display: flex;
   flex-direction: column-reverse;
@@ -49,6 +53,10 @@ html {
   padding-left: 5px;
 }
 
+.course-list {
+  border-left: none;
+}
+
 .course-list li {
   background-color: #232324;
   word-wrap: break-word;
@@ -57,10 +65,6 @@ html {
 .course-list li:hover {
   cursor: pointer;
   background-color: #ffbb32;
-}
-
-.course-list li:active {
-  background-color: #232324;
 }
 
 .course-nav {
@@ -81,9 +85,9 @@ html {
   display: flex;
 }
 
-.about-left {
+.about-majte {
   width: 80%;
-  margin-left: 3%;
+  margin-left: 4%;
   margin-right: 2%;
 }
 
