--- a/nos-tech/src/components/banner/Banner.css
+++ b/nos-tech/src/components/banner/Banner.css
@@ -18,6 +18,7 @@
 .CourseBanner{
     background-image: url('https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://s3.amazonaws.com/coursera_assets/browse/domain-banner/computer_science.png?auto=format%2Ccompress&amp;dpr=1');
     background-size: cover;
+    padding: 10px;
 }
 .Coursebanner-title{
     position: relative;
@@ -39,12 +40,20 @@
     transition-timing-function: ease-in-out;
     transition-duration: 0.5s;
     margin-bottom: 20px;
+    
 }
 .courseBanner-button:hover{
     transform: scale(1.1,1.1);
     z-index: 1;
     background-color: black;
     color: white;
+    text-decoration: none;
+}
+.CourseCategory-Banner{
+    background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20190421/pngtree-blockchain-technology-background-image_107831.jpg');
+    background-size: cover;
+    padding: 10px;
+    padding-bottom: 3rem;
 }
 
 /* //My Course banner  */
