--- a/nos-tech/src/components/header/header.css
+++ b/nos-tech/src/components/header/header.css
@@ -25,7 +25,7 @@
     transition: width .5s;
 } */
 
-li {
+.nav-item-list-styling {
       position: relative;
       display: block;
       text-decoration: none;
@@ -33,7 +33,7 @@ li {
       padding: 5px;
       transition: 0.5s; }
 
-li::after {
+.nav-item-list-styling::after {
         position: absolute;
         content: "";
         top: 100%;
@@ -46,7 +46,7 @@ li::after {
         transition: transform 0.5s;
       }
 
-li:hover::after {
+.nav-item-list-styling:hover::after {
         transform: scaleX(1);
         transform-origin: left;
         background: #f06470;
