--- a/nos-tech/src/screens/courses/courses.css
+++ b/nos-tech/src/screens/courses/courses.css
@@ -64,9 +64,16 @@ span.hover:hover{
 }
 
 .buy{
-    margin-left:'3px'; 
+    /* margin-left:'3px';  */
     margin-bottom: 10px;
-    padding:'12px';
+    padding:.55rem;
+    background-color: #fff;
+    color:#4169E1;
+    /* border-color: #4169E1; */
+}
+.buy:hover{
+    background-color: #4169E1;
+    color:#fff;
 }
 .add-course-form{
     position: relative;
