--- a/nos-tech/src/components/header/header.css
+++ b/nos-tech/src/components/header/header.css
@@ -1,3 +1,11 @@
+/* .static-top {
+    background-color: rgb(209, 132, 30);
+}
+
+#navlink-test {
+    color: white;
+} */
+
 @media screen and (max-width: 760px) {#c{
     margin: 0 auto;
   }}
@@ -31,7 +39,8 @@
       text-decoration: none;
       margin: 2px 5px;
       padding: 5px;
-      transition: 0.5s; }
+      transition: 0.5s; 
+    }
 
 .nav-item-list-styling::after {
         position: absolute;
