--- a/nos-tech/src/screens/adminViews/courseView.css
+++ b/nos-tech/src/screens/adminViews/courseView.css
@@ -2,10 +2,14 @@
   display: flex;
   justify-content: center;
   font-size: 13px;
-  width: 90%;
-  padding-left: 4%;
+  width: 80%;
+  margin-top: 5%;
+  padding-left: 3%;
 }
-
-h2 {
-  color: black;
+.courses-table-dsc{
+  width: 150px; 
+  white-space: nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  display: inline-block;
 }
