--- a/nos-tech/src/components/footer/footer.css
+++ b/nos-tech/src/components/footer/footer.css
@@ -8,10 +8,9 @@
 }
 
 .footeri {
-    background-color: whitesmoke;
+    background-color: #282c2d;
     width: 100%;
 }
-
 
 /* --------------------CONTENT------------------- */
 
@@ -137,13 +136,21 @@
     
     .list-item-container::after {
         content: '';
-        border-bottom: 1px solid red !important;
+        padding-bottom: 17px;
+        border-bottom: 1px solid rgb(240, 100, 112) !important;
         display: block;
         /* width: 400px; */
         padding-top: 10px;
     }
     
 }
+
+@media only screen and (max-width: 570px) {
+    .footeri {
+        background-color: #282c2d;
+        width: 110%;
+    }
+} 
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
