Carusel avatars, Forum Post Layout

--- a/nos-tech/src/components/footer/footer.css
+++ b/nos-tech/src/components/footer/footer.css
@@ -155,7 +155,7 @@
         content: '';
         border-bottom: 1px solid red !important;
         display: block;
-        /* width: 400px; */
+        width: 320px;
         padding-top: 10px;
     }
     
