--- a/nos-tech/src/screens/courses/courses.css
+++ b/nos-tech/src/screens/courses/courses.css
@@ -103,3 +103,15 @@ span.hover:hover{
     color:lightslategray;
     font-weight: 400;
 }
+.add-course-button-submit{
+    padding: 0.5rem;
+    border: none;
+    background-color: rgb(10, 124, 255);
+    color: white;
+}
+.add-course-button-submit:hover{
+    border: none;
+    background-color: white;
+    color: rgb(10, 124, 255);
+    border: 1px solid rgb(10, 124, 255);
+}
