--- a/nos-tech/src/screens/myCourses/myCourses.css
+++ b/nos-tech/src/screens/myCourses/myCourses.css
@@ -30,7 +30,8 @@
 .abo {
     display: flex;
     flex-direction: row;
-    margin: 2rem;
+    margin-top: 2rem;
+    margin-left: 3rem;
 }
   
 .abo-left {
@@ -65,20 +66,29 @@
 }
 
 .fav{
-    margin-left:8%;
+    margin-top: 2rem;
+    margin-left: 3rem;
 }
 
 .c-link{
     color: #337ab7;
 }
-
+.ovf{
+    overflow: hidden;
+}
 .c-image {
     width: 100%;
-    height: 25vh;
+    height: 27vh;
     object-fit: cover;
+    transform: scale(1);
+    transition: transform 0.5s ease;
+    cursor: pointer;
+}
+.c-image:hover{
+    transform: scale(1.09);
 }
 .c-foot {
-    background-color: #f4f4f4;
+    background-color: #f1f1f1;
 }
 
 .inst{
@@ -89,4 +99,23 @@
 
 .desc{
     height: 30vh;
+}
+.enrolled-c{
+    width: 20rem;
+    margin:1.4rem;
+    border-radius:5%;
+    box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.25);
+}
+.enrolled-c:hover{
+    box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.4);
+}
+.fav-c{
+    width: 20rem;
+    margin:1.4rem;
+    border-radius:5%;
+    box-shadow: 2px 2px 2px 1px rgba(0,0,0,0.2);
+}
+.fav-c:hover{
+    box-shadow: 5px 10px 20px 1px rgba(0,0,0,0.35) !important;
+    transform: scale(1.0000001);
 }
