Reduxing the code in myCourses by turning it in small components

--- a/nos-tech/src/screens/login/login.css
+++ b/nos-tech/src/screens/login/login.css
@@ -33,6 +33,7 @@
     background-color: #00132A !important;
     outline-color: #00132A !important;
     border-color:#00132A !important;
+    color: #fff !important;
     margin: 35px 10px;
     width: 150px;
     border-radius: 20px;
