Tag select multiple

--- a/nos-tech/src/screens/courses/courses.css
+++ b/nos-tech/src/screens/courses/courses.css
@@ -116,3 +116,6 @@ span.hover:hover{
     color: rgb(10, 124, 255);
     border: 1px solid rgb(10, 124, 255);
 }
+.go2646822163{
+    z-index: 5;
+}
