Changed URL params of cat&tags, integrated recharts on dashboard

--- a/nos-tech/src/screens/adminViews/courseView.css
+++ b/nos-tech/src/screens/adminViews/courseView.css
@@ -50,3 +50,11 @@
 .videoForm-container {
   width: 90%;
 }
+.nostech-guide-text{
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 2;
+  margin-left: 12rem;
+  padding-top: 1rem;
+  color: #005a8f;
+}
