--- a/nos-tech/src/components/password/password.css
+++ b/nos-tech/src/components/password/password.css
@@ -1,7 +1,7 @@
 .password-div {
     display: flex;
-    height: 500px;
-    width: 400px;
+    /* height: 500px; */
+    /* //width: 400px;  */
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -12,18 +12,37 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .req-inf {
+    align-items: center;
+    margin-top: 40px;
     margin-bottom: 15px;
-    width: 180px;
+    width: 280px;
     font-style: italic;
+    color: maroon;
 }
 
 .change-password-btn {
-    margin-top: 20px;
+    /* /margin-top: 20px; */
     background-color: #4C9453 !important;
     width: 220px;
     outline-color:  #4C9453 !important;
     border-color:  #4C9453 !important;
 }
+
+.inline-errormsg {
+    color: red;
+    font-size: 12px;
+}
+.hidden {
+    display: none;
+}
+
+.error-msg {
+    font-size: 14px;
+    color: red;
+    text-align: left;
+  }
+  
