--- a/nos-tech/src/components/personal-info/personal-info.css
+++ b/nos-tech/src/components/personal-info/personal-info.css
@@ -1,29 +1,33 @@
 .personal-info-div {
-    display: flex;
-    height: 500px;
-    width: 400px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  height: 500px;
+  width: 400px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .personal-info-form {
-    height: 450px;
+  height: 450px;
 }
 
 .aioutlineuseradd {
-    width: 80px;
-    height: 80px;
-    border: 2px dashed #222;
-    border-radius: 50%;
-    padding: 15px;
-    cursor: pointer;
+  width: 80px;
+  height: 80px;
+  border: 2px dashed #222;
+  border-radius: 50%;
+  padding: 15px;
+  cursor: pointer;
 }
 
 .spacing {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
-.change-pw-btn  {
-    justify-content: center;
-    align-items: center;
+.change-pw-btn {
+  justify-content: center;
+  align-items: center;
+}
+
+.personalInformationAlert {
+  margin-top: 15%;
 }
