--- a/nos-tech/src/screens/checkout/Checkout.css
+++ b/nos-tech/src/screens/checkout/Checkout.css
@@ -12,7 +12,7 @@
   padding: 2% 0;
   padding-left: 5%;
   border-width: 0;
-  padding-bottom: 21%;
+  padding-bottom: 9%;
   display: flex;
   flex-direction: row;
   box-shadow: 100px 100px;
@@ -42,7 +42,7 @@
 .checkoutAddressForm label {
   color: silver;
   font-size: 0.7rem;
-  margin-top: 3%;
+  margin-top: 1%;
 }
 
 .checkoutAddressForm input {
@@ -81,6 +81,38 @@
 }
 
 .checkoutImageDiv img {
-  max-width: 95%;
-  max-width: 95%;
+  width: 100%;
+  height: 100%;
+}
+
+.checkoutButtonDiv {
+  width: 80%;
+}
+
+.checkoutButtonDiv button {
+  background-color: #0177e2;
+  color: white;
+  padding: 10px 15px;
+  border: 0;
+  border-radius: 2px;
+  font-size: smaller;
+}
+
+.checkoutCourseDetails {
+  color: silver;
+  font-size: 0.9rem;
+}
+
+.checkoutCourseDetails :nth-child(2) {
+  font-size: 1rem;
+}
+
+.couponForm button {
+  background-color: #0177e2;
+  color: white;
+  border: 0;
+  border-radius: 2px;
+  font-size: smaller;
+  margin-left: 9px;
+  padding: 6px 18px;
 }
